--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
     <section class="schedule-section section-padding" id="section_5"></section>
       <h2 class="section-ueberschrift">Anfahrt</h2>
       <div class="anfahrt">
-        <a href="https://umap.openstreetmap.de/de/map/good-energy-festival-heidelberg_86593"><img src="images/Karte_groß.png" class="anfahrt-img"
+        <a href="https://umap.openstreetmap.de/de/map/good-energy-festival-heidelberg_86593"><img src="images/Karte_groß.png"
           srcset="
-          images/Karte_klein.png 350w
-          images/Karte_groß.png 700w,"><a>
+          images/Karte_klein.png 350w,
+          images/Karte_groß.png 700w," class="anfahrt-img"></a>
       </div>
     </section>
   
